# Ai

./: .env  .env.example  .gitignore  AGI_ARCHITECTURE.md  CUSTOM_MODEL_GUIDE.md  Cargo.toml  README.md  demo_custom_model.py  example.py  main.py  model_config.py  package-lock.json  requirements.txt  setup.py  setup_custom_model.py  show_custom_model_setup.py  test_custom_model.py  tools.yaml
.specify/scripts/powershell/: update-agent-context.ps1
Domino/: Bayesian model.py  avatar_memory.json  data_simulator.py  digital twin.py
agi_agent/: __init__.py  agent.py
agi_agent/core/: __init__.py  custom_model.py  knowledge_manager.py  learning_system.py  reasoning_engine.py  safety_controller.py  simple_generator.py  task_planner.py  tool_integration.py
agi_agent/interfaces/: __init__.py  communication.py
agi_agent/models/: Xing.cs  __init__.py  plan.py  reasoning.py  response.py  task.py
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: file_processor.rs  lib.rs  system.rs  tools.rs
core/src/file_processor/: reader.rs  transformer.rs  writer.rs
core/src/system/: environment.rs  paths.rs
core/src/tools/: executor.rs  process.rs
python-bridge/: Cargo.toml
python-bridge/src/: agent_core.rs  async_bridge.rs  data_exchange.rs  error_handling.rs  lib.rs
specs/001-convert-ai-agent/: plan.md  research.md  spec.md  tasks.md
specs/002-agi-task-automator/: spec.md
src/: main.rs
tests/: __init__.py  test_agent.py
