[package]
name = "ai-agent-cli"
version = "0.1.0"
edition = "2021"
description = "High-performance AI agent CLI written in Rust"
authors = ["xingxerx"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
pyo3 = { version = "0.19", features = ["auto-initialize"] }
tracing = "0.1"
tracing-subscriber = "0.3"
