[workspace]
members = [
    "cli",
    "core",
    "python-bridge",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace members
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
pyo3 = { version = "0.20", features = ["auto-initialize"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tracing = "0.1"
tracing-subscriber = "0.3"
criterion = "0.5"
