[package]
name = "ai-agent-python-bridge"
version = "0.1.0"
edition = "2021"
description = "PyO3 bridge between Rust performance layer and Python AI/ML"
authors = ["xingxerx"]

[lib]
name = "ai_agent_python_bridge"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Use workspace dependencies
pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Local workspace dependencies
ai-agent-core = { path = "../core" }